--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body{
   background-color: #bce9f5;
   padding : 15px;
 }
-h1{
+h1 {
   font-family : "Arial";
 }
-h2{
+h2 {
   font-family : "Lucida Sans Unicode";
 }
 
-p{
+p {
   font-family :  "Lucida Sans Unicode";
   font-size : 100%;
-}
+};
