--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #bce9f5;
+  background-color: #d9bdbd;
   padding : 15px;
 }
 h1 {
@@ -16,4 +16,21 @@ h2 {
 p {
   font-family :  "Lucida Sans Unicode";
   font-size : 100%;
-};
+}
+.idk {
+  border-style : solid;
+  border:blue;
+  font-size: 150%;
+  color: black;
+  background-color: #8ABAD3FF;
+}
+
+.active{
+  background-color: #8aa7d3
+}
+
+a {
+  text-decoration : none;
+  font-family : Arial, Helvetica, sans-serif;
+  color : white;
+}
