--- a/style.css
+++ b/style.css
@@ -23,14 +23,47 @@ p {
   font-size: 150%;
   color: black;
   background-color: #8ABAD3FF;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+
 }
 
 .active{
-  background-color: #8aa7d3
+  background-color: black;
+  border-style: solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 2px;
+  padding-left: 2px;
 }
 
 a {
   text-decoration : none;
-  font-family : Arial, Helvetica, sans-serif;
+  font-family : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color : white;
+}
+
+.live{
+   border-style: solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 2px;
+  padding-left: 2px;
+}
+
+.love{
+ border-style: solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 2px;
+  padding-left: 2px;
+}
+
+.laugh{
+ border-style: solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 2px;
+  padding-left: 2px;
 }
