--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 body{
-background-image:linear-gradient( #ffffff, #c991b0,#adaddb, #87b0d6);
+  background-image:linear-gradient( #ffffff, #c991b0,#adaddb, #87b0d6);
   padding : 15px;
-instead of 
+}
 h1 {
   font-family : "Arial";
   border-style: ridge;
