--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
   background-image: linear-gradient( #ffffff, #c991b0, #adaddb, #87b0d6);
   padding : 15px;
   height: 100%;
+  background-attachment: fixed;
+  margin: 0;
 }
 h1 {
   font-family : "Arial";
